<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backColor"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/noticeToolbar_detail"
        app:title="@string/notice">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/noticeCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/category"
        android:textColor="@color/orange"
        android:textSize="14dp"/>

    <TextView
        android:id="@+id/noticeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/noticeTitle"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/noticeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:text="@string/noticeDate"
            android:textSize="14sp"
            android:textColor="@color/darkGray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:text="@string/views"
            android:textSize="14sp"
            android:textColor="@color/darkGray"/>
        <TextView
            android:id="@+id/noticeViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:text="@string/viewsData"
            android:textSize="14sp"
            android:textColor="@color/darkGray"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_square"
        android:orientation="vertical">
    </LinearLayout>

    <TextView
        android:id="@+id/noticeDetailContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/noticeText"
        android:textSize="15sp"
        android:textColor="@color/black"/>
</LinearLayout>
