<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="@drawable/background_square_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/newClubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/club_name"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/app_complete"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/clubApplyBtnMessage"
        android:textSize="14dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/clubCompleteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/complete_button"
        android:text="@string/check"
        android:textSize="18dp"
        android:textColor="@color/white"/>
</LinearLayout>