<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="@color/white"
    android:orientation="vertical">

    <EditText
        android:id="@+id/reviewEdit"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/background_square"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/reviewNewText"
        android:textColor="@color/black"
        android:gravity="top"
        android:textSize="20dp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/background_square"
            android:text="@string/cancel"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/complete_button"
            android:text="@string/writeComplete"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>