<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/clubMainToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:title="@string/club_name"
                app:menu="@menu/menu_toolbar">
            </androidx.appcompat.widget.Toolbar>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp">
                <ImageView
                    android:id="@+id/adImage"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/ad"/>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center"
                android:background="@drawable/background_square"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/clubImage"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/studio" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/clubTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/club_name"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/member"
                                android:textSize="15sp" />
                            <TextView
                                android:id="@+id/memberCount"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="5dp"
                                android:text="@string/memberCount"
                                android:textSize="15sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:id="@+id/clubIntroduce"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/simpleIntro"
                    android:textSize="12sp" />
            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:tabBackground="@color/backColor"
                app:tabIndicatorColor="@android:color/black"
                app:tabIndicatorHeight="2dp"
                app:tabSelectedTextColor="@android:color/black"
                app:tabTextColor="@color/lightGray" />
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/clubJoinBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/main_item_button"
                android:text="@string/clubJoin"
                android:textSize="20dp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>